# Diff_driving_bot_tut_arduino

./: DiffDriveRobotCode_mk1.ino  EncoderRead.ino  IMURead.ino  MotorController.ino  README.md  rvizConfig.rviz
Circuits/MotorAddon/motorAddOn_mk1/: Sheet3.SchDoc  motorAddOn_mk1.PrjPcb
DiffDriveRobotCode_mk1/: DiffDriveRobotCode_mk1.ino  EncoderRead.ino  IMURead.ino  MotorController.ino
DiffDriveRobotCode_mk2_with_odom/: DiffDriveRobotCode_mk2_with_odom.ino  EncoderRead.ino  IMURead.ino  MotorController.ino
Diff_Robot_model/: DiffDriveBot.SLDASM  base.SLDPRT  diifbotbody_full.SLDASM  wheel.SLDPRT  ~$wheel.SLDPRT
Diff_Robot_model/diff_drive_bot_with_lidar/meshes/: base_link.STL  left_link.STL  lidar_base_link.STL
Diff_Robot_model/diff_drive_bot_with_lidar/urdf/: diff_drive_bot_with_lidar.urdf
Diff_Robot_model/diff_drive_bot_with_lidar2/: CMakeLists.txt
Diff_Robot_model/diffdrivebot/: CMakeLists.txt
Diff_Robot_model/rplidar-by-robopeak-1.snapshot.1/: rplidar_base.SLDPRT  rplidar_main.SLDPRT  rplidar_rot.SLDPRT
diff_driver_ros_tut/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
diff_driver_ros_tut/src/diff_drive_bot_with_lidar/: CMakeLists.txt  package.xml
diff_driver_ros_tut/src/diff_drive_bot_with_lidar/launch/: gazebo.launch
diff_driver_ros_tut/src/diff_drive_bot_with_lidar/meshes/: base_link.STL  lidar_link.STL  right_link.STL
diff_driver_ros_tut/src/diff_drive_bot_with_lidar/plugins/: lidar_plugin.cc
diff_driver_ros_tut/src/diff_drive_bot_with_lidar/urdf/: diff_drive_bot_with_lidar.csv  diff_drive_bot_with_lidar.urdf
(+139 files in other folders)
